# win-sndfile-th-bug

./: README.md
doesnt-work/: stack.yaml
doesnt-work/the-dep/: the-dep.cabal
doesnt-work/the-dep/src/: TheDep.hs
doesnt-work/the-pkg/: the-pkg.cabal
doesnt-work/the-pkg/src/: Main.hs
works/: stack.yaml
works/the-pkg/: the-pkg.cabal
works/the-pkg/src/: Main.hs
