name:                the-pkg
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable the-pkg
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  pkgconfig-depends:   sndfile
